# hUI

./: .gitignore  .markdownlint.jsonc  Cargo.toml  README.md  flake.nix
.devcontainer/: devcontainer.json
bevy_hui/: Cargo.toml
hui/: Cargo.toml
hui-bevy/: Cargo.toml
hui-bevy/src/: input.rs  lib.rs  render.rs
hui-derive/: Cargo.toml
hui-derive/src/: lib.rs
hui-euc/: Cargo.toml
hui-euc/src/: lib.rs  pipeline.rs
hui-examples/: Cargo.toml  boilerplate.rs
hui-examples/assets/blink/: SIL Open Font License.txt  info.txt
hui-examples/assets/icons/: visual-studio-code-icon_32x32.rgba
hui-examples/examples/: align.rs  align_test.rs  modern_testbed.rs  mom_downloader.rs  rounded.rs  rounded_rect.rs  stress.rs  test.rs  test2.rs  test_hui_euc.rs  text_center.rs  text_weird.rs  ui_test.rs  ui_test3.rs  ui_test_2_loading.rs  ui_test_3_transform.rs  ui_test_4_wrapping.rs  ui_test_5_input.rs  ui_test_6.rs  ui_test_6_slider.rs  ui_test_7_9patch.rs  ui_test_wrapping.rs  vscode_layout.rs
hui-glium/: Cargo.toml
hui-glium/shaders/: fragment.150.frag  fragment.frag  vertex.150.vert  vertex.vert
hui-glium/src/: lib.rs
hui-loaders/: Cargo.toml
hui-loaders/src/: lib.rs
hui-loaders/src/loaders/: file.rs  image.rs
hui-painter/: Cargo.toml
hui-painter-wip/: Cargo.toml
hui-painter-wip/src/: lib.rs  text.rs  util.rs
hui-painter-wip/src/paint/: command.rs
hui-painter-wip/src/paint/command/: list.rs  rectangle.rs  text.rs  transform.rs
hui-painter-wip/src/text/: font.rs
hui-painter-wip/src/texture/: atlas.rs
hui-painter/src/: backend.rs  lib.rs  paint.rs  presentation.rs  rect.rs  text.rs  texture.rs  util.rs
hui-painter/src/paint/: buffer.rs  command.rs
hui-painter/src/paint/command/: list.rs  rectangle.rs  text.rs  transform.rs
hui-painter/src/text/: font.rs  ftm.rs
hui-painter/src/texture/: atlas.rs
hui-shared/: Cargo.toml
hui-shared/src/: lib.rs  rect.rs
hui-shared/src/rect/: corners.rs  rect.rs  sides.rs
hui-wgpu/: Cargo.toml
hui-wgpu/shaders/: ui.wgsl
hui-wgpu/src/: lib.rs
hui-winit/: Cargo.toml
hui-winit/src/: lib.rs
hui/src/: background.rs  color.rs  draw.rs  element.rs  event.rs  font.rs  frame.rs  input.rs  instance.rs  interaction.rs  layout.rs  lib.rs  macros.rs  measure.rs  rectangle.rs  signal.rs  state.rs  text.rs
hui/src/draw/: atlas.rs  corner_radius.rs
hui/src/element/: builtin.rs
hui/src/element/builtin/: br.rs  container.rs  fill_rect.rs  frame_view.rs  image.rs  interactable.rs  progress_bar.rs  rect.rs  slider.rs  spacer.rs  text.rs  transformer.rs
hui/src/frame/: impls.rs  layer.rs  nine_patch.rs  point.rs  rect.rs  stack.rs
hui/src/rect/: color.rs  corners.rs  rect.rs
hui/src/rectangle/: corners.rs  sides.rs
hui/src/rectangle/corners/: corners_colors.rs
hui/src/signal/: trigger.rs
hui/src/text/: font.rs  ftm.rs  stack.rs
