[package]
name = "hui-examples"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dev-dependencies]
hui = { path = "../hui" }
hui-glium = { path = "../hui-glium" }
hui-winit = { path = "../hui-winit" }
kubi-logging = { git = "https://github.com/griffi-gh/kubi", rev = "c162893fd" }
glium = "0.35"
winit = "0.30"
glam = "0.28"
log = "0.4"
image = { version = "0.25", features = ["jpeg", "png"] }

#created as a workaround for rust-analyzer dependency cycle (which should be allowed)
