[package]
name = "hui-examples"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
publish = false

[dev-dependencies]
hui = { path = "../hui" }
hui-painter = { path = "../hui-painter" }
hui-glium = { path = "../hui-glium" }
hui-winit = { path = "../hui-winit" }
kubi-logging = { git = "https://github.com/griffi-gh/kubi", rev = "be1e24ba0c9e6d24128e7d0e74bebd8b90c23be7" }
glium = "0.36"
winit = "0.30"
glam = "0.29"
log = "0.4"
image = { version = "0.25", features = ["jpeg", "png"] }

#created as a workaround for rust-analyzer dependency cycle (which should be allowed)
