[package]
name = "hui-examples"
version = "0.0.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[dev-dependencies]
hui = { path = "../hui" }
hui-painter = { path = "../hui-painter" }
hui-glium = { path = "../hui-glium" }
hui-winit = { path = "../hui-winit" }
kubi-logging = { git = "https://github.com/griffi-gh/kubi", rev = "1e051c47b64c967305e4bbbd464ef5da2cc56bbb" }
glium = "0.36"
winit = "0.30"
glam = "0.30"
log = "0.4"
image = { version = "0.25", features = ["jpeg", "png"] }

#created as a workaround for rust-analyzer dependency cycle (which should be allowed)
