[package]
name = "hui-glium"
description = "glium render backend for `hui`"
repository = "https://github.com/griffi-gh/hui"
readme = "../README.md"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.1.0-alpha.4"
rust-version = "1.75"
edition = "2021"
license = "GPL-3.0-or-later"
publish = true
include = [
  "shaders/**/*",
  "src/**/*.rs",
  "Cargo.toml",
]

[dependencies]
hui = { version = "=0.1.0-alpha.4", path = "../hui", default-features = false }
glium = { version = "0.34", default-features = false }
glam = "0.27"
log = "0.4"
