[package]
name = "hui-glium"
description = "glium render backend for `hui`"
repository = "https://github.com/griffi-gh/hui"
readme = "../README.md"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.1.0-alpha.7"
rust-version = "1.85"
edition = "2024"
license = "GPL-3.0-or-later"
publish = true
include = [
  "shaders/**/*",
  "src/**/*.rs",
  "Cargo.toml",
]

[dependencies]
hui-painter = { version = "=0.1.0-alpha.7", path = "../hui-painter", default-features = false }
glium = { version = "0.36", default-features = false }
glam = "0.30"
log = "0.4"
