[package]
name = "hui-painter-wip"
description = "UI rendering middleware for hUI, abstracts away triangulation, text layout and rendering and all the other hard stuff."
repository = "https://github.com/griffi-gh/hui"
readme = "../README.md"
authors = ["griffi-gh <prasol258@gmail.com>"]
rust-version = "1.75"
version = "0.1.0-alpha.6"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false # TODO: change to true once ready
include = [
  "src/**/*.rs",
  "Cargo.toml",
]

[dependencies]
hui-shared = { version = "0.1.0-alpha.6", path = "../hui-shared" }
glam = "0.30"
log = "0.4"
rect_packer = "0.2" # TODO: use sth else like `crunch` instead?
hashbrown = "0.15"
nohash-hasher = "0.2"
fontdue = "0.9"
