[package]
name = "hui-painter"
description = "UI rendering middleware for hUI, abstracts away triangulation, text rendering and all the other hard stuff."
repository = "https://github.com/griffi-gh/hui"
readme = "../README.md"
authors = ["griffi-gh <prasol258@gmail.com>"]
rust-version = "1.75"
version = "0.1.0-alpha.5"
edition = "2021"
license = "GPL-3.0-or-later"
publish = true
include = [
  "assets/**/*",
  "src/**/*.rs",
  "Cargo.toml",
]

[dependencies]
hui-shared = { version = "0.1.0-alpha.5", path = "../hui-shared" }
glam = "0.28"
