[package]
name = "hui-painter"
description = "UI rendering middleware for hUI, abstracts away triangulation, text layout and rendering and all the other hard stuff."
keywords = ["ui", "gui", "portable", "gamedev", "hui"]
categories = ["no-std", "gui", "game-development"]
repository = "https://github.com/griffi-gh/hui"
readme = "../README.md"
authors = ["griffi-gh <prasol258@gmail.com>"]
rust-version = "1.85"
version = "0.1.0-alpha.7"
edition = "2024"
license = "GPL-3.0-or-later"
publish = true
include = [
  "assets/**/*",
  "src/**/*.rs",
  "Cargo.toml",
]

[dependencies]
hui-shared = { version = "0.1.0-alpha.7", path = "../hui-shared" }
glam = "0.30"
rect_packer = "0.2" # TODO: use sth else like `crunch` instead?
hashbrown = "0.15"
nohash-hasher = "0.2"
fontdue = "0.9"
rustc-hash = "2.0"
log = "0.4"

[features]
default = ["default-font"]
default-font = []