[package]
name = "hui-shared"
description = "internal crate"
repository = "https://github.com/griffi-gh/hui"
readme = "../README.md"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.1.0-alpha.6"
edition = "2021"
license = "GPL-3.0-or-later"
publish = true
include = [
  "src/**/*.rs",
  "Cargo.toml",
]

[dependencies]
glam = "0.29"
