[package]
name = "hui-wgpu"
description = "wgpu render backend for `hui`"
repository = "https://github.com/griffi-gh/hui"
readme = "../README.md"
authors = ["griffi-gh <prasol258@gmail.com>"]
version = "0.1.0-alpha.6"
rust-version = "1.85"
edition = "2024"
license = "GPL-3.0-or-later"
publish = true
include = [
  "shaders/**/*",
  "src/**/*.rs",
  "Cargo.toml",
]

[dependencies]
hui-painter = { version = "=0.1.0-alpha.6", path = "../hui-painter", default-features = false }
wgpu = { version = "24", default-features = false, features = ["wgsl"]}
bytemuck = "1.15"
log = "0.4"
glam = "0.30"
